--- a/python_for_datascience/caseStudy.ipynb
+++ b/python_for_datascience/caseStudy.ipynb
@@ -12,10 +12,19 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Görev 1"
+    "# Car Crashes Dataset"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 1"
    ]
   },
   {
@@ -52,10 +61,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Görev 2"
+    "## Task 2"
    ]
   },
   {
@@ -95,10 +105,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Görev 3"
+    "## Task 3"
    ]
   },
   {
@@ -696,17 +707,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# GÖREVLER"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## TITANIC DATASET"
+    "# TITANIC DATASET"
    ]
   },
   {
@@ -3450,10 +3455,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TİPS DATASET"
+    "# TİPS DATASET"
    ]
   },
   {
@@ -4833,20 +4839,13 @@
    "source": [
     "new_df.reset_index()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.11 ('tensorflow')",
+   "display_name": "Python 3.7 (tensorflow)",
    "language": "python",
-   "name": "python3"
+   "name": "tensorflow"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4858,7 +4857,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.11 (default, Aug  6 2021, 09:57:55) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
